Fixed the image preview moving off center when caption was too long.

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -35,14 +35,14 @@
 }
 
 .modal__image {
-  max-height: 80vh;
-  max-width: 80vw;
   width: 100%;
   height: 100%;
   border-radius: 8px;
 }
 
 .modal__container_image {
+  max-height: 80vh;
+  max-width: 80vw;
   background-color: transparent;
   width: fit-content;
 }
@@ -124,12 +124,13 @@
   color: white;
   background-color: #212121;
   border-radius: 8px;
-  width: fit-content;
   padding: 4px 8px;
   font-family: "Poppins", Arial, sans-serif;
   margin: 8px 0 0;
   font-size: 20px;
   line-height: 1.2;
+  max-width: 100%;
+  width: fit-content;
 }
 
 @media screen and (max-width: 640px) {
